fix line wrap problem with inline-block in browsers other than FireFox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,3 +68,7 @@ body {
   position: relative;
   z-index: 3;
 }
+
+.story p span {
+  display: inline-block;
+}
